# base-data-project

./: MANIFEST.in  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  routes.py  setup.cfg  setup.py
base_data_project/: __init__.py  cli.py  config.py  helpers.py  log_config.py  models.py  path_helpers.py  service.py  utils.py
base_data_project/algorithms/: __init__.py  base.py  factory.py
base_data_project/algorithms/examples/: example_algorithm.py  fill_bags.py  lp_algo.py
base_data_project/data_manager/: __init__.py  factory.py
base_data_project/data_manager/managers/: __init__.py  base.py  managers.py
base_data_project/examples/: data_container_example.py
base_data_project/logging/: __init__.py  hybrid_manager.py  retention.py  template_manager.py
base_data_project/process_management/: __init__.py  exceptions.py  manager.py  schemas.py  stage_handler.py  utils.py
base_data_project/process_management/guides/: changing_decisions-guide.md  flexible-process-guide.md  process_manager-guide.md
base_data_project/storage/: __init__.py  containers.py  factory.py  models.py
base_data_project/templates/base_R_algorithm/: batch_process.py.jinja  main.py.jinja  requirements.txt  routes.py.jinja
base_data_project/templates/base_R_algorithm/src/: __init__.py.jinja  config.py.jinja  models.py.jinja
base_data_project/templates/base_R_algorithm/src/R_functions/: ALCAMPO_M2.R  add_OuT.R  algoFuncs.R  atribuiDescanso.R  auditor_interJ.R  criacaoMatrizes.R  dbconn.R  funcs.R  funcs_R.R  funcs_continuos.R  funcs_extra.R  funcs_partidos.R  getCoreSchedule.R  getDayAloc.R  getFuncs.R  getUnidade.R  get_needed_files.r  grafico_valida.R  (+41 more)
base_data_project/templates/base_project/: README.md.jinja  batch_process.py.jinja  requirements.txt
base_data_project/templates/base_project/src/: config.py.jinja  models.py.jinja
docs/: algorithms.md  data-management.md  examples.md  getting-started.md  git-branch-guide.md  index.md  process-management.md
docs/diagrams/: architecture-diagram.tsx
docs/requirements-features/: for-loop-stages-requirements.md  intermediate-data-storage-requirements.md  substage-feature-requirements.md
tests/: conftest.py
tests/functional/: test_basic_workflow.py
tests/integration/: test_data_process_integration.py
tests/unit/: base_test.py  debug_test.py  test_algorithms.py  test_data_manager.py  test_data_model.py  test_error_handling.py  test_parameterized.py  test_process_manager.py  test_service.py  test_stage_handler.py  test_storage.py  test_utils.py  test_with_mocking.py
(+37 files in other folders)
