[metadata]
name = base-data-project
version = attr: base_data_project.__version__
description = Standardized framework for data processing projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Antonio Alves
author_email = antonio.alves@tlantic.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    sqlalchemy>=1.4.0
    click>=8.0.0
    numpy>=1.21.0
    jinja2>=3.0.0
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    base-data-project = base_data_project.cli:main